<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/widget_recipe_name"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        android:contentDescription="@string/background_image_cd" />

    <Button
        android:id="@+id/widget_showrecipe_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/widget_button_width"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/widget_ingredient_title"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/widget_recipe_name"
        android:text="@string/widget_show_recipe_button_label"
        android:textColor="@android:color/secondary_text_light" />

    <Button
        android:id="@+id/widget_selectrecipe_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="@dimen/widget_button_width"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/widget_ingredient_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/widget_recipe_name"
        android:gravity="center"
        android:text="@string/widget_select_recipe_button_label"
        android:textColor="@android:color/secondary_text_light" />

    <TextView
        android:id="@+id/widget_ingredient_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_recipe_name"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/widget_title_vertical_padding"
        android:paddingEnd="@dimen/widget_title_horizontal_padding"
        android:paddingStart="@dimen/widget_title_horizontal_padding"
        android:paddingBottom="@dimen/widget_title_vertical_padding"
        android:text="@string/widget_shopping_list_header"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/widget_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/widget_title_vertical_padding"
        android:paddingEnd="@dimen/widget_title_horizontal_padding"
        android:paddingStart="@dimen/widget_title_horizontal_padding"
        android:paddingBottom="@dimen/widget_title_vertical_padding"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="@dimen/heading_text_size" />

    <ListView
        android:id="@+id/widget_ingredient_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_ingredient_title"
        android:background="@color/widget_white_transparent_bg"
        tools:listitem="@layout/lv_item_widget_ingredient" />

    <TextView
        android:id="@+id/widget_ingredients_emptyview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/widget_ingredient_title"
        android:background="@color/widget_white_transparent_bg"
        android:gravity="center"
        android:text="@string/widget_no_recipe_selected_message"
        android:textSize="@dimen/heading_text_size" />

</RelativeLayout>